hphp/hack/test/typecheck/dynamic/refinement.php.exp
File "refinement.php", line 21, characters 18-19:
Invalid argument (Typing[4110])
  File "refinement.php", line 6, characters 24-29:
  Expected `D<int>`
  File "refinement.php", line 20, characters 13-16:
  But got `(<expr#1> as D<T#1> & ~<expr#1> as C<int>)` from this `is` expression test
